--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <HTML>
-  <img src="file:///H:/Digital%20Art/Projects/Advanced/Tree%20face/Business%20Logo2%20-%20Noah%20Johnson.jpg" alt="HTML Letters" width="317" height="218">
+  <img src="https://imgur.com/36qhxOQ" alt="HTML Letters" width="317" height="218">
   
