--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <HTML>
-  <img src="//s.imgur.com/min/embed.js" alt="HTML Letters" width="317" height="218">
+  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="HTML Letters" width="84" height="80">
   
