--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <HTML>
-  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="HTML Letters" width="84" height="80">
+  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
+  <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="Slogan" width="450" height="300">
   
