--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<HTML>
-  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
-  <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="Slogan" width="1312.5" height="700">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+img {
+  width: 100%;
+}
+</style>
+</head>
+<body>
+
+ <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
+ <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="Slogan" width="1312.5" height="700">
+ 
+</body>
+</html>
+ 
   
