--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
 
  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
- <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="Slogan" width="1312.5" height="700">
+<style>
+body {
+  background-image: url('i.imgur.com/xYsV0Ii.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 25% 25%;
+}
+</style>
  
 </body>
 </html>
