--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
 <style>
 body {
-  background-image: url("i.imgur.com/xYsV0Ii.jpg");
+  background-image: url('i.imgur.com/xYsV0Ii.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 25% 25%;
