--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 
  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
-<style>
-body {
-  background-image: url('i.imgur.com/xYsV0Ii.jpg');
+ <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="slogan" width="1400" height="700">
+ <style>
+ body {
+  background-image: url('https://i.imgur.com/xYsV0Ii.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 25% 25%;
