--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 
  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
- <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="slogan" width="1400" height="700">
+ <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="slogan" width="1400" height="700" hidden=true>
  <style>
  body {
   background-image: url('https://i.imgur.com/xYsV0Ii.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 25% 25%;
+  background-size: 125% 125%;
 }
 </style>
  
