--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
  <style>
  body {
   background-image: url('https://i.imgur.com/xYsV0Ii.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
-  background-size: 90% 90%;
+  background-size: 105% 105%;
 }
 </style>
  
