--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </style>
 </head>
 <body>
+<head>
+  <title>Ctrl + PC Home</title>
+   <h1> Ctrl+PC HOME </h1>
+</head>
 
  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
  <img src="https://i.imgur.com/xYsV0Ii.jpg" alt="slogan" width="1400" height="700" hidden=true>
