--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <head>
   <title>Ctrl + PC Home</title>
-   <h1> Ctrl+PC HOME </h1>
+   <h1> Ctrl+PC Home </h1>
 </head>
 
  <img src="https://i.imgur.com/36qhxOQ.jpg" alt="logo" width="84" height="80">
